<resources>
    <string name="app_name">Pickers</string>
    <string name="home_greeting_message">Welcome to Pickers.</string>
    <string name="username_hint">Please enter your username.</string>
    <string name="password_hint">Please enter your password.</string>
    <string name="signin_button_text">Sign In</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="username_txtView">UserName:</string>
    <string name="password_txtView">Password:</string>
    <string name="firstname_txtView">FirstName:</string>
    <string name="lastname_txtView">LastName:</string>
    <string name="age_txtView">Age:</string>
    <string name="email_txtView">Email:</string>
    <string name="introduction_txtView">About Me:</string>
    <string name="submit_btn">Submit</string>
    <string name="dob_txtView">Date of Birth:</string>
    <string name="dob_btn_txt">Select a date</string>
    <string name="contact_title">Contact Us</string>
    <string name="show_on_map_btn">Show On Map</string>
    <string name="connection_status_title">Connection Status</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">This function is still under construction.</string>
</resources>
