<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.chihwu.picker.SignUpActivity">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_txtView"
            android:id="@+id/username_txtView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="36dp"
            android:textSize="20sp"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/username_editTxt"
            android:layout_below="@+id/username_txtView"
            android:layout_alignLeft="@+id/username_txtView"
            android:layout_alignStart="@+id/username_txtView"
            android:ems="6"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_txtView"
            android:id="@+id/password_txtView"
            android:textSize="20sp"
            android:layout_alignTop="@+id/username_txtView"
            android:layout_toRightOf="@+id/username_txtView"
            android:layout_toEndOf="@+id/username_txtView"
            android:layout_marginLeft="80dp"
            android:layout_marginStart="80dp" />



        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password_editTxt"
            android:layout_below="@+id/password_txtView"
            android:layout_alignLeft="@+id/password_txtView"
            android:layout_alignStart="@+id/password_txtView"
            android:ems="6"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstname_txtView"
            android:id="@+id/firstname_txtView"
            android:layout_below="@+id/username_editTxt"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="46dp"
            android:textSize="20sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/firtname_editTxt"
            android:layout_below="@+id/firstname_txtView"
            android:layout_alignLeft="@+id/firstname_txtView"
            android:layout_alignStart="@+id/firstname_txtView"
            android:ems="6"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastname_txtView"
            android:id="@+id/lastname_txtView"
            android:layout_below="@+id/password_editTxt"
            android:layout_alignLeft="@+id/password_editTxt"
            android:layout_alignStart="@+id/password_editTxt"
            android:layout_marginTop="46dp"
            android:textSize="20sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lastname_editTxt"
            android:layout_below="@+id/lastname_txtView"
            android:layout_alignLeft="@+id/lastname_txtView"
            android:layout_alignStart="@+id/lastname_txtView"
            android:ems="6"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dob_txtView"
            android:id="@+id/dob_txtView"
            android:textSize="20sp"
            android:layout_alignTop="@+id/email_txtView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dob_btn"
            android:text="@string/dob_btn_txt"
            android:layout_below="@+id/dob_txtView"
            android:layout_alignLeft="@+id/dob_txtView"
            android:layout_alignStart="@+id/dob_txtView"
            android:onClick="showDatePickerDialog"
            android:ems="6"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_txtView"
            android:id="@+id/email_txtView"
            android:layout_below="@+id/lastname_editTxt"
            android:layout_alignLeft="@+id/lastname_editTxt"
            android:layout_alignStart="@+id/lastname_editTxt"
            android:layout_marginTop="46dp"
            android:textSize="20sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email_editTxt"
            android:layout_below="@+id/email_txtView"
            android:layout_alignLeft="@+id/email_txtView"
            android:layout_alignStart="@+id/email_txtView"
            android:ems="8"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/introduction_txtView"
            android:id="@+id/introduction_txtView"
            android:layout_below="@+id/email_editTxt"
            android:layout_marginTop="46dp"
            android:textSize="20sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/introduction_editTxt"
            android:layout_below="@+id/introduction_txtView"
            android:layout_alignLeft="@+id/introduction_txtView"
            android:layout_alignStart="@+id/introduction_txtView"
            android:ems="20"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_btn"
            android:id="@+id/submit_btn"
            android:layout_below="@+id/introduction_editTxt"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="50dp" />
    </RelativeLayout>



</ScrollView>
