<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chihwu.picker.MainActivity"
    android:background="#c4f360"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/radar"
            android:id="@+id/home_page_image"
            android:layout_gravity="center|center_vertical"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_greeting_message"
            android:textSize="25sp"
            android:layout_below="@+id/home_page_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:id="@+id/home_greeting_message"
            android:textColor="#545454" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin_button_text"
            android:id="@+id/signin_btn"
            android:background="#f5a61c"
            android:layout_below="@+id/home_greeting_message"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_button_text"
            android:id="@+id/signup_btn"
            android:background="#f5a61c"
            android:layout_below="@+id/signin_btn"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp" />

    </RelativeLayout>

</ScrollView>